--- a/src/components/chatContent/chatContent.css
+++ b/src/components/chatContent/chatContent.css
@@ -188,7 +188,7 @@
 }
 
 .date-span {
-    font-size: x-small;
+    font-size: small;
     background-color: rgba(0,0,0,0.1);
     padding: 0.5rem;
     border-radius: 1rem;
